--- a/package.json
+++ b/package.json
@@ -9,10 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "express": "4.21.2",
-    "multer": "1.4.5-lts.1",
+    "express": "^4.21.2",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "3.12.0"
   }
- 
-  
 }
